Sanchit | #918 | Changing the text colour of module header row to default (black). It shows up correctly on IE, but looks distorted on Firefox and Chrome.

--- a/css/light-blue.css
+++ b/css/light-blue.css
@@ -2459,10 +2459,6 @@ table {
 	width: 958px;
 }
 
-thead tr {
-	color: white;
-}
-
 thead td {
 	background: #ebedf0 url(../images/light-blue/background-texture.png) repeat 0 0;
 	background-color: rgb(124, 169, 214);
